tests/neg/double_def.ovt
sensor s : rate(int, (10, 0));
actuator a : rate(int, (10, 0));
node f {c: clock} (i : rate(int, c)) returns (o : rate(int, c))
let
  o = i;
  o = 0 fby i;
tel
a = f(s);
